iptables.txt
# Generated by iptables-save v1.8.4 on Tue Aug 18 11:46:59 2026
*raw
:PREROUTING ACCEPT [59830244929:97520371281127]
:OUTPUT ACCEPT [22916323533:45353905033717]
-A PREROUTING -d 169.254.25.10/32 -p udp -m udp --dport 53 -j NOTRACK
-A PREROUTING -d 169.254.25.10/32 -p tcp -m tcp --dport 53 -j NOTRACK
-A OUTPUT -s 169.254.25.10/32 -p tcp -m tcp --sport 8080 -j NOTRACK
-A OUTPUT -d 169.254.25.10/32 -p tcp -m tcp --dport 8080 -j NOTRACK
-A OUTPUT -d 169.254.25.10/32 -p udp -m udp --dport 53 -j NOTRACK
-A OUTPUT -d 169.254.25.10/32 -p tcp -m tcp --dport 53 -j NOTRACK
-A OUTPUT -s 169.254.25.10/32 -p udp -m udp --sport 53 -j NOTRACK
-A OUTPUT -s 169.254.25.10/32 -p tcp -m tcp --sport 53 -j NOTRACK
COMMIT
# Completed on Tue Aug 18 11:46:59 2026
# Generated by iptables-save v1.8.4 on Tue Aug 18 11:46:59 2026
*nat
:PREROUTING ACCEPT [2:170]
:INPUT ACCEPT [1:110]
:OUTPUT ACCEPT [12:865]
:POSTROUTING ACCEPT [12:865]
:FLANNEL-POSTRTG - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-LOAD-BALANCER - [0:0]
:KUBE-MARK-DROP - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODE-PORT - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-SERVICES - [0:0]
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A POSTROUTING -m comment --comment "flanneld masq" -j FLANNEL-POSTRTG
-A FLANNEL-POSTRTG -m mark --mark 0x4000/0x4000 -m comment --comment "flanneld masq" -j RETURN
-A FLANNEL-POSTRTG -s 10.233.71.0/24 -d 10.233.64.0/18 -m comment --comment "flanneld masq" -j RETURN
-A FLANNEL-POSTRTG -s 10.233.64.0/18 -d 10.233.71.0/24 -m comment --comment "flanneld masq" -j RETURN
-A FLANNEL-POSTRTG ! -s 10.233.64.0/18 -d 10.233.71.0/24 -m comment --comment "flanneld masq" -j RETURN
-A FLANNEL-POSTRTG -s 10.233.64.0/18 ! -d 224.0.0.0/4 -m comment --comment "flanneld masq" -j MASQUERADE --random-fully
-A FLANNEL-POSTRTG ! -s 10.233.64.0/18 -d 10.233.64.0/18 -m comment --comment "flanneld masq" -j MASQUERADE --random-fully
-A KUBE-LOAD-BALANCER -j KUBE-MARK-MASQ
-A KUBE-MARK-DROP -j MARK --set-xmark 0x8000/0x8000
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-NODE-PORT -p tcp -m comment --comment "Kubernetes nodeport TCP port for masquerade purpose" -m set --match-set KUBE-NODE-PORT-TCP dst -j KUBE-MARK-MASQ
-A KUBE-NODE-PORT -p udp -m comment --comment "Kubernetes nodeport UDP port for masquerade purpose" -m set --match-set KUBE-NODE-PORT-UDP dst -j KUBE-MARK-MASQ
-A KUBE-POSTROUTING -m comment --comment "Kubernetes endpoints dst ip:port, source ip for solving hairpin purpose" -m set --match-set KUBE-LOOP-BACK dst,dst,src -j MASQUERADE
-A KUBE-POSTROUTING -m mark ! --mark 0x4000/0x4000 -j RETURN
-A KUBE-POSTROUTING -j MARK --set-xmark 0x4000/0x0
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -j MASQUERADE --random-fully
-A KUBE-SERVICES -m comment --comment "Kubernetes service lb portal" -m set --match-set KUBE-LOAD-BALANCER dst,dst -j KUBE-LOAD-BALANCER
-A KUBE-SERVICES ! -s 10.233.64.0/18 -m comment --comment "Kubernetes service cluster ip + port for masquerade purpose" -m set --match-set KUBE-CLUSTER-IP dst,dst -j KUBE-MARK-MASQ
-A KUBE-SERVICES -m addrtype --dst-type LOCAL -j KUBE-NODE-PORT
-A KUBE-SERVICES -m set --match-set KUBE-CLUSTER-IP dst,dst -j ACCEPT
-A KUBE-SERVICES -m set --match-set KUBE-LOAD-BALANCER dst,dst -j ACCEPT
COMMIT
# Completed on Tue Aug 18 11:46:59 2026
# Generated by iptables-save v1.8.4 on Tue Aug 18 11:46:59 2026
*filter
:INPUT ACCEPT [5945:25511282]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [4169:30465230]
:FLANNEL-FWD - [0:0]
:HQ_SSH_GUARD - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-NODE-PORT - [0:0]
:KUBE-PROXY-FIREWALL - [0:0]
:KUBE-SOURCE-RANGES-FIREWALL - [0:0]
-A INPUT -p tcp -m tcp --dport 22 -j HQ_SSH_GUARD
-A INPUT -d 169.254.25.10/32 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -d 169.254.25.10/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -m comment --comment "kube-proxy firewall rules" -j KUBE-PROXY-FIREWALL
-A INPUT -m comment --comment "kubernetes health check rules" -j KUBE-NODE-PORT
-A INPUT -j KUBE-FIREWALL
-A FORWARD -m comment --comment "kube-proxy firewall rules" -j KUBE-PROXY-FIREWALL
-A FORWARD -m comment --comment "kubernetes forwarding rules" -j KUBE-FORWARD
-A FORWARD -m comment --comment "flanneld forward" -j FLANNEL-FWD
-A OUTPUT -s 169.254.25.10/32 -p udp -m udp --sport 53 -j ACCEPT
-A OUTPUT -s 169.254.25.10/32 -p tcp -m tcp --sport 53 -j ACCEPT
-A OUTPUT -j KUBE-FIREWALL
-A FLANNEL-FWD -s 10.233.64.0/18 -m comment --comment "flanneld forward" -j ACCEPT
-A FLANNEL-FWD -d 10.233.64.0/18 -m comment --comment "flanneld forward" -j ACCEPT
-A HQ_SSH_GUARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A HQ_SSH_GUARD -s 192.168.10.0/24 -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -j ACCEPT
-A HQ_SSH_GUARD -s 86.37.2.155/32 -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -j ACCEPT
-A HQ_SSH_GUARD -s 86.37.2.156/32 -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -j ACCEPT
-A HQ_SSH_GUARD -s 86.37.2.157/32 -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -j ACCEPT
-A HQ_SSH_GUARD -s 86.37.2.158/32 -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -j ACCEPT
-A HQ_SSH_GUARD -p tcp -m tcp --dport 22 -j DROP
-A HQ_SSH_GUARD -j RETURN
-A KUBE-FIREWALL ! -s 127.0.0.0/8 -d 127.0.0.0/8 -m comment --comment "block incoming localnet connections" -m conntrack ! --ctstate RELATED,ESTABLISHED,DNAT -j DROP
-A KUBE-FIREWALL -m comment --comment "kubernetes firewall for dropping marked packets" -m mark --mark 0x8000/0x8000 -j DROP
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -m mark --mark 0x4000/0x4000 -j ACCEPT
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding conntrack rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A KUBE-NODE-PORT -m comment --comment "Kubernetes health check node port" -m set --match-set KUBE-HEALTH-CHECK-NODE-PORT dst -j ACCEPT
-A KUBE-SOURCE-RANGES-FIREWALL -j DROP
COMMIT
# Completed on Tue Aug 18 11:46:59 2026
# Generated by iptables-save v1.8.4 on Tue Aug 18 11:46:59 2026
*mangle
:PREROUTING ACCEPT [712860340492:964782299877930]
:INPUT ACCEPT [318081582027:422920670250278]
:FORWARD ACCEPT [394778756716:541861629459791]
:OUTPUT ACCEPT [306700423699:245114281289241]
:POSTROUTING ACCEPT [699950471238:786869025600444]
:KUBE-IPTABLES-HINT - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
COMMIT
# Completed on Tue Aug 18 11:46:59 2026
